# ai_cup

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
hackathon/: example.env
hackathon/ai/: apps.py  utils.py  views.py
hackathon/ai/utils/: basic.py  conf.py
hackathon/bot/: apps.py  models.py  views.py
hackathon/bot/handlers/: __init__.py  basic.py  question.py  registration.py
hackathon/bot/management/commands/: _private.py  runbot.py
hackathon/hackathon/: settings.py  urls.py
hackathon/home/: admin.py  forms.py  models.py  views.py
hackathon/home/migrations/: 0001_initial.py  0002_alter_comment_parent.py  0003_alter_question_description.py
hackathon/static/css/: home.css  styles.css
hackathon/static/js/: main.js
hackathon/static/templates/: comment.html  homepage.html  index.html  login.html  navbar.html  new-question.html  question.html  register.html
