[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["LANneeer <0penguin@mail.ru>"]
readme = "README.md"
packages = [{include = "hackathon", from = "hackathon"}]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2,<4.0"
aiogram = "^2.25.1"
cohere = "^4.1.4"
django-environ = "^0.10.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
libsass = "^0.22.0"
django-compressor = "^4.3.1"
django-sass-processor = "^1.2.2"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

